# MetaHeck

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  test_grader.py  test_sandbox.py  validate-submission.sh
.agent/rules/: hackathon.md
env/: data_engine.py  data_generator.py  environment.py  models.py
env/graders/: grader1.py  grader2.py  grader3.py
server/: app.py
