[project]
name = "bank-kyc-audit-env"
version = "0.2.0"
description = "Bank KYC & AML Audit Environment (2025 Standards)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "openenv-core>=0.2.0",
    "python-dotenv",
    "requests>=2.33.1",
    "openai>=2.30.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

# Auto-discover packages (best for your current structure with 'env' and 'server' folders)
[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "server*"]

[tool.openenv]
name = "BankKYCAuditEnv"
version = "2025.1"
description = "Realistic multi-turn KYC/AML fraud detection and audit environment for digital banks"
