[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-kyc-audit-env"
version = "0.2.0"
description = "Bank KYC & AML Audit Environment (2026 Standards)"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "fastapi>=0.115.0",
    "openenv-core>=0.2.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "uvicorn>=0.30.0",
    "httpx>=0.24.0",
    "pytest>=7.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["env", "server"]
